# hourcoin

./: CLAUDE.md  Cargo.toml  README.md  RUNNING_EXAMPLES.md
docs/: LeapSeconds.md  NetworkGuide.md  ProofOfTime.md
examples/: proof_of_time_demo.rs
src/: block.rs  blockchain.rs  hashable.rs  leap_seconds.rs  lib.rs  main.rs  time_sync.rs  tonce.rs  transaction.rs  validator.rs
src/network/: miner_client.rs  mod.rs  protocol.rs  validator_server.rs
