
[package]
name = "hourcoin"
version = "0.1.0"
authors = ["Nitesh <niteshkartha@yahoo.com>"]
edition = "2018"

[lib]
name = "blockchainlib"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[[bin]]
name = "validator"
path = "src/bin/validator.rs"

[[bin]]
name = "miner"
path = "src/bin/miner.rs"

[dependencies]
hex = "0.4.3"
crypto-hash = "0.3.4"
rand = "0.8.3"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"